react是如何防止xss攻击的

--- a/react/1.常见问法.md
+++ b/react/1.常见问法.md
@@ -22,3 +22,20 @@ hooks 挂载数据的数据结构叫做 fiber
 + Fiber双缓存可以在构建好wip Fiber树之后切换成current Fiber，内存中直接一次性切换，提高了性能
 + Fiber的存在使异步可中断的更新成为了可能，作为工作单元，可以在时间片内执行工作，没时间了交还执行权给浏览器，下次时间片继续执行之前暂停之后返回的Fiber
 + Fiber可以在reconcile的时候进行相应的diff更新，让最后的更新应用在真实节点上
++ 16版本在react是用函数栈去深度优先遍历虚拟dom，而fiber的链表树数据结构模拟了函数栈深度优先遍历，但由于是链表结构，它能通过保存下一个fiber工作单元节点而使这个深度优先遍历中断。
+
+### react是如何防止xss攻击的
++ 对于单个文本节点（），react直接设置其父节点的textContent和nodevalue来防止xss。
++ 富文本节点是通过读取dangerouslySetInnerHTML来获取，并通过设innerhtml来设置。
++ $$typeof 的作用，为每个react元素创建了一个以symbol(全局独一无二的值)，防止后端用户传入以下这种伪react对象，而刚好被前端用到。
+```js
+  {
+  type: "div",
+  props: {
+    dangerouslySetInnerHTML: {
+      __html: '<img src="x" onerror="alert(1)">'
+    },
+  },
+  ref: null
+}
+```
